# SheduleGeneratorWeb

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  schedule.sql
app/api/routes/: __init__.py  auth.py  export.py  groups.py  lessons.py  manual.py  negative_filters.py  schedule.py  schedule_api.py  statistics.py  subjects.py  teachers.py
app/core/: config.py
app/db/: database.py  models.py
app/services/: auth_services.py  exel_exporter.py  group_service.py  manual_schedule_service.py  negative_filters_service.py  schedule_services.py  shedule_generator.py  subject_services.py  teacher_service.py
app/static/css/: auth.css  min.css  style.css
app/static/js/: auth.js  login.js  main.js  register.js
app/templates/: base.html  error.html  index.html  login.html  register.html
